--- a/index.html
+++ b/index.html
@@ -9,13 +9,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="styles.css" />
-
-
   </head>
   <body>
-  <header>PANGOLIN FACTS!</header>
+    <header>PANGOLIN FACTS!</header>
+    <br>
 
+    <h1>From Wikipedia:</h1>
 
-
+    <br>
+    <p>
+      Pangolins, sometimes known as scaly anteaters,[6] are mammals of the order
+      Pholidota (/fɒlɪˈdoʊtə/, from Ancient Greek ϕολιδωτός 'clad in
+      scales').[7] The one extant family, Manidae, has three genera: Manis,
+      Phataginus and Smutsia. Manis comprises the four species found in Asia,
+      while Phataginus and Smutsia include two species each, all found in
+      sub-Saharan Africa.[8] These species range in size from 30 to 100 cm (12
+      to 39 in). A number of extinct pangolin species are also known. Pangolins
+      have large, protective keratin scales covering their skin; they are the
+      only known mammals with this feature. They live in hollow trees or
+      burrows, depending on the species. Pangolins are nocturnal, and their diet
+      consists of mainly ants and termites, which they capture using their long
+      tongues. They tend to be solitary animals, meeting only to mate and
+      produce a litter of one to three offspring, which they raise for about two
+      years. Pangolins are threatened by poaching (for their meat and scales,
+      which are used in Chinese traditional medicine[9]) and heavy deforestation
+      of their natural habitats, and are the most trafficked mammals in the
+      world.[10] As of January 2020, there are eight species of pangolin whose
+      conservation status is listed in the threatened tier. Three (Manis
+      culionensis, M. pentadactyla and M. javanica) are critically endangered,
+      three (Phataginus tricuspis, Manis crassicaudata and Smutsia gigantea) are
+      endangered and two (Phataginus tetradactyla and Smutsia temminckii) are
+      vulnerable on the Red List of Threatened Species of the International
+      Union for Conservation of Nature.[11]
+    </p>
+    <br>
+    <p>
+        <img src="https://staticshare.america.gov/uploads/2016/01/AP_2392588480161.jpg" alt="pangolin">
+    </p>
   </body>
 </html>
